--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="Mon">
         <h1>Ramon Lapuz Candelario Jr</h1>
-        <img src="./images/RamonLCJR.png" alt="Ramon's Picture">
+        <img src="RamonLCJR.png" alt="Ramon's Picture">
     </div>
 
 
