--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
 
             <a href="#homepage">About Me</a>
-            <a href="./Advance TIp Calculator/exercise2.html" target="_blank">Advance Tip Calculator</a>
+            <a href="tipcalculator.html" target="_blank">Advance Tip Calculator</a>
             <a href="#ecommerce">Ecommerce Project</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
